Fix: bubble links' overflow due to right margin

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -86,7 +86,7 @@ header {
 
                 width: max-content;
 
-                a {
+                > a {
 
                     margin-right: 50px;
 
@@ -155,6 +155,8 @@ header {
         }
 
         > a {
+
+            margin-right: initial !important;
 
             margin-bottom: 26px;
 
